[package]
name = "webhooksrv"
version = "0.1.0"
authors = ["Michael Zimmermann <michael.zimmermann@grandcentrix.net>"]
edition = "2018"

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
env_logger = "0.8"
openssl = "0.10"
hmac = "0.11"
sha2 = "0.9"
hex = "0.4"
serde_json = "1.0"
serde = "1.0"
serde_yaml = "0.8"
jsonwebtoken = "7"
