[package]
name = "webhooksrv"
version = "0.1.0"
authors = ["Michael Zimmermann <michael.zimmermann@grandcentrix.net>"]
edition = "2018"

[dependencies]
git2 = "0.13"
actix-web = { version = "3", features = ["openssl"] }
anyhow = "1.0"
env_logger = "0.8"
hex = "0.4"
hmac = "0.11"
jsonwebtoken = "7"
lazy_static = "1.4"
#openssl = "0.10"
openssl-probe = "0.1"
regex = "1.5"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.9"
tokio = { version = "0.2", features = ["fs", "macros", "process", "time"] }

[dev-dependencies]
tempfile = "3.2"
